<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>onnxruntime_ament</name>
    <version>1.1.0</version>
    <description>Model of legged robot</description>
    <maintainer email="liaoqiayuan@gamil.com">Qiayuan Liao</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>ament_cmake_auto</build_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
